# CaloXDataAnalysis

./: .gitignore  README.md  checkFERSDRS.py  checkMCP.py  checkServiceDRS.py  combineRunsDRSTimmingPlots.py  convertData.py  fers_calib.py  filterEvents.py  filterevents.py  makeDQMHists.py  makeDQMPlots.py  makeDRSPeakTS.py  makeDRSTimingPlots.py  makeEventDisplays.py  makeEventDisplays_EventChooser.py  makeEventsDisplay.py  makeFERSEnergyPlots.py  makeHodoHeatmap.py  makeHodoPlots.py  makePlots_EventDisplays.py  makePlots_HodoScopes.py  makePlots_SciCer.py  makeSelections.py  makeSiPMFits.py  make_event_displays.py  prepareDQMPlots.py  pyproject.toml  runFits.py  runNumber.py  runconfig.py  setup.sh  sipmfit.py  testSiPMFit.py  toyCalibration.py  toyCalibration_DRS.py  validateMap.py  visualizeDCMIPEvents.py  visualizeEvents.py
CMSPLOTS/: CMS_lumi.py  myFunction.py
OldCode/: filterEvents.py  makeEnergyFits.py  makeEventsDisplay.py  makeSiPMFits.py  toySciCer.ipynb
analysis/: hist_functions.py  plot_functions.py  registry.py  sequence.py
channels/: CaloXChannel.py  calox_channel.py  channel_map.py  gain_validator.py  validateMap.py  validate_map.py
configs/: plot_config.py  plot_ranges.py  plot_style.py  plotranges.py  run_config.py  runconfig.py  selection_config.py  selection_values.py
core/: analysis_manager.py  hist_book.py  plot_manager.py  selection_manager.py  sequence.py
data/: AvePulse3mmSIPM_50ps_2200ts_max682ts_Inter4_R1592.npy  Runlist.json  RunlistAugust.json  data_org.json  datafiles.json  datafilesTimingDAQ.json  datafiles_cosmic.json  drstriggermap.json  scanruns.json  triggerdelay.json
jobs/: calox_job_submitter.py  conversion_job_submitter.py  data_org.json  dqm_job_submitter.py  dqmjob_submitter.py  job_submitter.py  submit_conversion.sh
plotting/: CMS_lumi.py  (+2 more)
(+99 files in other folders)
